--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
 name = "cadical-rs"
-version = "0.0.1"
+version = "0.0.2"
 authors = ["Miklos Maroti <mmaroti@gmail.com>"]
 edition = "2018"
-links = "cadicalc"
-
-[dependencies]
+links = "ccadical"
 
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }
