--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cadical-rs"
+name = "cadical"
 version = "0.0.2"
 authors = ["Miklos Maroti <mmaroti@gmail.com>"]
 edition = "2018"
