--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ env:
 matrix:
   include:
     - env: TARGET=x86_64-unknown-linux-gnu
+    - env: TARGET=x86_64-pc-windows-gnu
     - env: TARGET=x86_64-pc-windows-msvc
       os: windows
     - env: TARGET=x86_64-apple-darwin
