--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: rust
 
 env:
   global:
-    - CRATE_NAME=cadical-rs
+    - CRATE_NAME=cadical
 
 matrix:
   include:
@@ -15,6 +15,7 @@ matrix:
       os: osx
     - env: TARGET=x86_64-unknown-linux-gnu
       rust: nightly
+    - env: TARGET=i686-unknown-linux-gnu
 
 before_install:
   - rustup self update
