--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cadical"
-description = "Rust bindings to the CaDiCaL SAT solver"
-version = "0.0.4"
+description = "Rust bindings for the CaDiCaL SAT solver"
+version = "0.1.0"
 license = "MIT"
 authors = ["Miklos Maroti <mmaroti@gmail.com>"]
 edition = "2018"
