--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ keywords = ["SAT", "solver", "logic", "satisfiability", "minisat"]
 categories = ["mathematics", "science"]
 readme = "README.md"
 links = "ccadical"
+exclude = ["cadical/src/makefile", "cadical/scripts", "cadical/test"]
 
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }
