--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "cadical"
 description = "Rust bindings for the CaDiCaL SAT solver"
-version = "0.1.9"
+version = "0.1.10"
 license = "MIT"
 authors = ["Miklos Maroti <mmaroti@gmail.com>"]
 edition = "2018"
@@ -14,3 +14,6 @@ exclude = ["cadical/src/makefile", "cadical/scripts", "cadical/test"]
 
 [build-dependencies]
 cc = { version = "1.0", features = ["parallel"] }
+
+[features]
+debug = []
