removed sync implementation (send is still safe)

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,8 +28,8 @@ before_install:
   - rustup self update
 
 script:
-  - cargo build --verbose
-  - cargo test -- --nocapture
+  - cargo build --features cpp-debug --verbose
+  - cargo test --features cpp-debug -- --nocapture
   - cargo build --release --verbose
   - cargo test --release -- --nocapture
 
