--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -143,10 +143,26 @@ jobs:
   #################################################################################################
 
   mac-os:
-    name: Mac-OS
+    name: MacOS
     runs-on: macos-latest
     timeout-minutes: 4
     steps:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - run: cargo test --verbose
+
+  #################################################################################################
+  # Clang in ubuntu
+  #################################################################################################
+
+  clang-in-ubuntu:
+    name: Clang in Ubuntu
+    runs-on: ubuntu-latest
+    timeout-minutes: 4
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+      - run: export CXX=clang++
+      - run: cargo test --verbose
+
+
