--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -152,7 +152,7 @@ jobs:
       - run: cargo test --verbose
 
   #################################################################################################
-  # Clang in ubuntu
+  # Clang in Ubuntu
   #################################################################################################
 
   clang-in-ubuntu:
@@ -163,6 +163,20 @@ jobs:
       - uses: actions/checkout@v3
       - uses: dtolnay/rust-toolchain@stable
       - run: export CXX=clang++
+      - run: cargo test --verbose
+
+  #################################################################################################
+  # LLD in Ubuntu
+  #################################################################################################
+
+  lld-in-ubuntu:
+    name: LLD in Ubuntu
+    runs-on: ubuntu-latest
+    timeout-minutes: 4
+    steps:
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
+      - run: export RUSTFLAGS="-C link-arg=-fuse-ld=lld"
       - run: cargo test --verbose
 
 
