--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -11,12 +11,15 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: [ubuntu-latest, windows-latest, macos-latest]
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout
+      uses: actions/checkout@v4
       with:
-        submodules: 'true'
+        submodules: true
     - name: Build
-      run: RUST_BACKTRACE=1 cargo build --verbose
+      run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
+    - name: Run tests in release
+      run: cargo test --verbose --release
