--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,16 +2,16 @@ name: Rust
 
 on:
   push:
-    branches: [ "test" ]
+    branches: [master, test]
   pull_request:
-    branches: [ "test" ]
+    branches: [master, test]
 
 env:
   CARGO_TERM_COLOR: always
 
 jobs:
   build:
-    runs-on: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: [ubuntu-latest]
     steps:
     - name: Checkout
       uses: actions/checkout@v4
