--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "cadical"]
 	path = cadical
-	url = https://github.com/arminbiere/cadical.git
+	url = https://github.com/mmaroti/cadical-rs.git
