--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -17,9 +17,11 @@ jobs:
         platform:
           - runner: ubuntu-24.04
           - runner: ubuntu-22.04
-          - runner: windows-latest
+          - runner: windows-2022
+          - runner: windows-2025
           - runner: macos-13
           - runner: macos-14
+          - runner: macos-15
     steps:
     - name: Checkout
       uses: actions/checkout@v4
